package eventql;

enum DHTNodeStatus {
  DHTNODE_JOINING = 0;
  DHTNODE_LIVE = 1;
  DHTNODE_MAINTENANCE = 2;
  DHTNODE_LEAVING = 3;
};

message DHTNode {
  required string name = 2;
  required string addr = 3;
  required DHTNodeStatus status = 4;
  repeated string sha1_tokens = 1;
};

message ClusterConfig {

  optional uint32 version = 1;

  repeated DHTNode dht_nodes = 3;
  optional uint32 dht_num_copies = 4 [default = 3];

};
